--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "front-end-mentor",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass --watch ."
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "sass": "^1.54.3"
-  }
+	"name": "front-end-mentor",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {}
 }
